--- a/README
+++ b/README
@@ -25,3 +25,6 @@ Message boards.
 
 Chat rooms. 
     Users can utilise text based chat rooms.
+
+Possible API's to use:
+    Weather: OpenWeatherMap - https://openweathermap.org/
