--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+We are looking to build a progressive web application with widgets displaying several data sources and features.
+
 MUST HAVES:
 
 Originate from a Secure Origin. 
