--- a/README
+++ b/README
@@ -30,3 +30,7 @@ Chat rooms.
 
 Possible API's to use:
     Weather: OpenWeatherMap - https://openweathermap.org/
+    
+    
+    
+ This is Alex's commit   
