--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Reference a Web App Manifest with at least the following properties:
     name
     short_name
     start_url
-    display (with a value of standalone or fullscreen)
+    display (with a value of stand-alone or full-screen)
     an icon at least 144x144 large in png format
 
 NICE TO HAVE:
@@ -26,7 +26,7 @@ Message boards.
     Users can make posts and comments.
 
 Chat rooms. 
-    Users can utilise text based chat rooms.
+    Users can utilize text based chat rooms.
 
 Possible API's to use:
     Weather: OpenWeatherMap - https://openweathermap.org/
