--- a/README
+++ b/README
@@ -26,11 +26,11 @@ Message boards.
     Users can make posts and comments.
 
 Chat rooms. 
-    Users can utilise text based chat rooms.
+    Users can utilize text based chat rooms.
 
 Possible API's to use:
     Weather: OpenWeatherMap - https://openweathermap.org/
     
     
     
- This is Alex's commit #3
+
